--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "convex": "^1.10.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "react": "^18",
