--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
