--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "convex": "^1.10.0",
+    "convex-helpers": "^0.1.27",
     "date-fns": "^3.6.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "lucide-react": "^0.363.0",
