--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^3.6.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "lucide-react": "^0.363.0",
+    "nanoid": "^5.0.7",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
     "query-string": "^9.0.0",
